Updated contacts page

--- a/color.html
+++ b/color.html
@@ -17,7 +17,49 @@
             <li class="nav-item">
 				<button class ="btn" onclick="doLogout();">Logout</button>
             </li>
-          </ul>
+        </ul>
+		<div class="container-sm">
+			<div class="input-group mb-3">
+				<input type="text" class="form-control" placeholder="Search contact..." aria-describedby="basic-addon1">
+			</div>
+		</div>
+		<div class="container-xl contacts-container">
+			<div class="row text-center title-container border-bottom border-dark">
+				<div class="col contact">
+					First Name
+				</div>
+				<div class="col contact">
+					Last Name
+				</div>
+				<div class="col contact">
+					Email
+				</div>
+				<div class="col contact">
+					Phone
+				</div>
+				<div class="col contact">
+					Date Added
+				</div>
+			</div>
+			<div class="row text-center rows-container">
+				<div class="col contact">
+					First Name
+				</div>
+				<div class="col contact">
+					Last Name
+				</div>
+				<div class="col contact">
+					Email
+				</div>
+				<div class="col contact">
+					Phone
+				</div>
+				<div class="col contact">
+					Date Added
+				</div>
+			</div>
+		</div>
+		
 	</div>
 		<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 
