--- a/index.html
+++ b/index.html
@@ -13,14 +13,22 @@
 </head>
 <body>
 	<div class="container-fluid background">
-		<ul class="nav justify-content-end">
+		<!-- <ul class="nav justify-content-end">
             <li class="nav-item">
 				<button class ="btn" onclick="location.href = 'login.html'">Login</button>
             </li>
             <li class="nav-item">
 				<button class="btn" onclick="location.href = 'Signup.html'">Signup</button>
             </li>
-          </ul>
+          </ul> -->
+		  <div class="container text-center index-container">
+			<div class="row">
+			  <div class="col">
+				<button class ="btn btn-lg text-center" onclick="location.href = 'login.html'">Login</button>
+			  </div>
+			  <div class="col">
+				<button class="btn btn-lg text-center" onclick="location.href = 'Signup.html'">Signup</button>
+			  </div>
 		<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 	</div>
 </body>
