update home and contacts pages.

--- a/color.html
+++ b/color.html
@@ -41,23 +41,43 @@
 					Date Added
 				</div>
 			</div>
-			<div class="row text-center rows-container">
-				<div class="col contact">
-					First Name
+			<div class="rows-container">
+				<div class="row text-center">
+					<div class="col contact border border-dark">
+						First Name
+					</div>
+					<div class="col contact border border-dark">
+						Last Name
+					</div>
+					<div class="col contact border border-dark">
+						Email
+					</div>
+					<div class="col contact border border-dark">
+						Phone
+					</div>
+					<div class="col contact border border-dark">
+						Date Added
+					</div>
 				</div>
-				<div class="col contact">
-					Last Name
-				</div>
-				<div class="col contact">
-					Email
-				</div>
-				<div class="col contact">
-					Phone
-				</div>
-				<div class="col contact">
-					Date Added
+				<div class="row text-center">
+					<div class="col contact border border-dark">
+						First Name
+					</div>
+					<div class="col contact border border-dark">
+						Last Name
+					</div>
+					<div class="col contact border border-dark">
+						Email
+					</div>
+					<div class="col contact border border-dark">
+						Phone
+					</div>
+					<div class="col contact border border-dark">
+						Date Added
+					</div>
 				</div>
 			</div>
+			
 		</div>
 		
 	</div>
