--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 				<button class="btn" onclick="location.href = 'Signup.html'">Signup</button>
             </li>
           </ul> -->
-		  <div class="container text-center index-container">
-			<div class="row">
-			  <div class="col">
-				<button class ="btn btn-lg text-center" onclick="location.href = 'login.html'">Login</button>
+		  <div class="container">
+			<div class="row justify-content-center">
+			  <div class="col-1">
+				<button class ="btn btn-lg text-center btn-dark" onclick="location.href = 'login.html'">Login</button>
 			  </div>
-			  <div class="col">
-				<button class="btn btn-lg text-center" onclick="location.href = 'Signup.html'">Signup</button>
+			  <div class="col-1">
+				<button class="btn btn-lg text-center btn-dark" onclick="location.href = 'Signup.html'">Signup</button>
 			  </div>
 		<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 	</div>
