Updated home page.

--- a/signup.html
+++ b/signup.html
@@ -37,7 +37,7 @@
                     <div class="row mb-3">
                         <label for="inputLastName3" class="col-sm-2 col-form-label">LastName</label>
                         <div class="col-sm-10">
-                          <input type="LatName" class="form-control" id="inputLastName" required
+                          <input type="LastName" class="form-control" id="inputLastName" required
                           autocomplete="on">
                         </div>
                     </div>
