--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 				<button class="btn" onclick="location.href = 'Signup.html'">Signup</button>
             </li>
           </ul> -->
-		  <div class="container">
-			<div class="row justify-content-center">
-			  <div class="col-1">
-				<button class ="btn btn-lg text-center btn-dark" onclick="location.href = 'login.html'">Login</button>
-			  </div>
-			  <div class="col-1">
-				<button class="btn btn-lg text-center btn-dark" onclick="location.href = 'Signup.html'">Signup</button>
-			  </div>
+		<div class="row justify-content-center">
+		  	<div class="col d-flex justify-content-end">
+				<button class="btn btn-lg text-center btn-dark" onclick="location.href = 'login.html'">Login</button>
+			</div>
+			<div class="col d-flex justify-content-start">
+				<button class="btn btn-lg text-center btn-dark" onclick="location.href = 'signup.html'">Signup</button>
+			</div>
+		</div>
 		<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 	</div>
 </body>
