--- a/color.html
+++ b/color.html
@@ -18,9 +18,13 @@
 				<button class ="btn" onclick="doLogout();">Logout</button>
             </li>
         </ul>
-		<div class="container-sm">
-			<div class="input-group mb-3">
-				<input type="text" class="form-control" placeholder="Search contact..." aria-describedby="basic-addon1">
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-md-6">
+					<div class="input-group mb-3">
+						<input type="text" class="form-control" placeholder="Search contact..." aria-describedby="basic-addon1">
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="container-xl contacts-container">
