--- a/color.html
+++ b/color.html
@@ -81,15 +81,20 @@
 		</div>
 		
 	</div>
-		<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 
+	<div id="accessUIDiv">
+		<br />
+	
+		<input type="text" id="searchText" placeholder="Contact To Search For"/>
+		<button type="button" id="searchContact" class="buttons" onclick="searchContact();"> Search Contact </button><br />
+		<span id="contactSearchResult"></span>
+		<p id="contactList">
+		</p><br /><br />
+	</div>
+
+		<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>	
 </body>
 </html>
-
-
-
-
-
 
 
 
@@ -119,21 +124,6 @@
 <div id="loggedInDiv">
 	<span id="userName"></span><br />
 	<button type="button" id="logoutButton" class="buttons" onclick="doLogout();"> Log Out </button>
-</div>
-
-<div id="accessUIDiv">
-	<br />
-
-	<input type="text" id="searchText" placeholder="Color To Search For"/>
-	<button type="button" id="searchColorButton" class="buttons" onclick="searchColor();"> Search Color </button><br />
-	<span id="colorSearchResult"></span>
-	<p id="colorList">
-	</p><br /><br />
-
-	<input type="text" id="colorText" placeholder="Color To Add">
-	<button type="button" id="addColorButton" class="buttons" onclick="addColor();"> Add Color </button><br />
-	<span id="colorAddResult"></span>
-</div>
-
+</div> 
 </body>
 </html> -->
