--- a/login.html
+++ b/login.html
@@ -19,43 +19,43 @@
               <button class="btn" onclick="location.href = 'index.html'">Home</button>
             </li>
             <li class="nav-item">
-              <button class="btn" onclick="location.href = 'Signup.html'">Signup</button>
+              <button class="btn" onclick="location.href = 'signup.html'">Sign-up</button>
             </li>
           </ul>
 		<div class="row">
 			<div class="col-md-4 col-sm-4 col-xs-12"></div>
 			<div class="col-md-4 col-sm-4 col-xs-12">
 			<!--form starts here-->
-                <form class="form-container">
 					<div class="row mb-3">
-					  <label for="inputUserName3" class="col-sm-2 col-form-label">UserName</label>
-					  <div class="col-sm-10">
-						<input type="UserName" class="form-control" id="inputUserName3" required>
+					  <label for="loginName">Username</label>
+					  <div class="col-sm-12">
+						<input type="text" class="form-control" id="loginName" required/>
 					  </div>
 					</div>
 					<div class="row mb-3">
-					  <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
-					  <div class="col-sm-10">
-						<input type="password" class="form-control" id="inputPassword3" required 
-                        pattern="(?=.*\d)(?=.*[A-Za-z])(?=.*[!@#$%^&*]).{8,32}">
+					  <label for="loginPassword">Password</label>
+					  <div class="col-sm-12">
+						<input type="password" class="form-control" id="loginPassword" required />
+                        <!--Add this after troubleshooting 
+                            pattern="(?=.*\d)(?=.*[A-Za-z])(?=.*[!@#$%^&*]).{8,32}" -->
 					  </div>
 					</div>
             
 					<div class="row mb-3">
-					  <div class="col-sm-10 offset-sm-2">
+					  <div class="col-sm-10">
 						<div class="form-check">
-						  <input class="form-check-input" type="checkbox" id="gridCheck1">
+						  <input class="form-check-input" type="checkbox" id="gridCheck1"/>
 						  <label class="form-check-label" for="gridCheck1">
 							Remember me
 						  </label>
 						</div>
 					  </div>
 					</div>
-                    <div class="d-grid">
+                    <div class="d-grid mx-auto">
                         <button class="btn btn-success" type="submit" onclick="doLogin()">Submit</button>
+                        <span class="text" id="loginResult"></span>
                     </div>
-				  </form>
-                  <!--form ends here-->
+				  <!-- </form> -->
 			</div>
 			<div class="col-md-4-col col-sm-4 col-xs-12"></div>
 		</div>
