--- a/signup.html
+++ b/signup.html
@@ -25,36 +25,37 @@
 		<div class="row">
 			<div class="col-md-4 col-sm-4 col-xs-12"></div>
 			<div class="col-md-4 col-sm-4 col-xs-12">
+			<!--form starts here-->
                     <div class="row mb-3">
-					  <label for="inputFirstName3" class="col-sm-2 col-form-label">FirstName</label>
-					  <div class="col-sm-10">
-						<input type="FirstName" class="form-control" id="inputFirstName" required
-                        autocomplete="on">
+					  <label for="firstName">First name</label>
+					  <div class="col-sm-12">
+						<input type="firstName" class="form-control" id="firstName" required
+                        autocomplete="on"/>
 					  </div>
 					</div>
                     <div class="row mb-3">
-                        <label for="inputLastName3" class="col-sm-2 col-form-label">LastName</label>
-                        <div class="col-sm-10">
-                          <input type="LastName" class="form-control" id="inputLastName" required
-                          autocomplete="on">
+                        <label for="lastName">Last name</label>
+                        <div class="col-sm-12">
+                          <input type="lastName" class="form-control" id="lastName" required
+                          autocomplete="on"/>
                         </div>
                     </div>
 					<div class="row mb-3">
-					  <label for="inputUserName3" class="col-sm-2 col-form-label">UserName</label>
-					  <div class="col-sm-10">
-						<input type="UserName" class="form-control" id="inputUserName3" required>
+					  <label for="userName">Username </label>
+					  <div class="col-sm-12">
+						<input type="userName" class="form-control" id="userName" required/>
 					  </div>
 					</div>
 					<div class="row mb-3">
-					  <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
-					  <div class="col-sm-10">
-						<input type="password" class="form-control" id="inputPassword3" required>
+					  <label for="password">Password </label>
+					  <div class="col-sm-12">
+						<input type="password" class="form-control" id="password" required/>
 					  </div>
 					</div>
 					<div class="row mb-3">
-					  <div class="col-sm-10 offset-sm-2">
+					  <div class="col-sm-12">
 						<div class="form-check">
-						  <input class="form-check-input" type="checkbox" id="gridCheck1">
+						  <input class="form-check-input" type="checkbox" id="gridCheck1"/>
 						  <label class="form-check-label" for="gridCheck1">
 							Remember me
 						  </label>
@@ -62,8 +63,10 @@
 					  </div>
 					</div>
                     <div class="d-grid">
-                        <button class="btn btn-success" type="submit">Submit</button>
+                        <button class="btn btn-success" type="submit" onclick="doSignup()">Submit</button>
+                        <span class="text" id="signupResult"></span>
                     </div>
+                  <!--form ends here-->
 			</div>
 			<div class="col-md-4-col col-sm-4 col-xs-12"></div>
 		</div>
