--- a/color.html
+++ b/color.html
@@ -10,6 +10,13 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+
+	<script type="text/javascript">
+		document.addEventListener('DOMContentLoaded', function() 
+		{
+			readCookie();
+		}, false);
+	</script>
 </head>
 <body>
 	<div class="container-fluid background">
@@ -22,9 +29,14 @@
 			<div class="row justify-content-center">
 				<div class="col-md-8">
 					<div class="input-group mb-3">
-						<input onkeyup=searchContacts() id="searchText" type="text" class="form-control" placeholder="Search contact..." aria-describedby="basic-addon1">
+						<input  id="searchText" type="text" class="form-control" placeholder="Search contact..." aria-describedby="basic-addon1">
 						<button class="btn btn-warning" id="searchContactButton" onclick=searchContacts()>Search</button>
-						<button class="btn btn-warning" onclick=showTable()>Add Contact</button>
+						<span id="contactSearchResult"></span>
+						<p id="contactList">
+						</p><br /><br>
+						
+						<button type="button" id="addContactButton" class="btn btn-warning" onclick=addContact()>Add Contact</button>
+						<span id="contactAddResult"></span>
 					</div>
 				</div>
 			</div>
@@ -51,7 +63,7 @@
 		<br />
 	
 		<input type="text" id="searchText" placeholder="Contact To Search For"/>
-		<button type="button" id="searchContact" class="buttons" onclick="searchContact();"> Search Contact </button><br />
+		<button type="button" id="searchContact" class="buttons" onclick="searchContacts();"> Search Contact </button><br />
 		<span id="contactSearchResult"></span>
 		<p id="contactList">
 		</p><br /><br />
@@ -73,14 +85,6 @@
 	<script type="text/javascript" src="js/code.js"></script>
     <link href="css/styles.css" rel="stylesheet">	
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-	
-	<script type="text/javascript">
-	document.addEventListener('DOMContentLoaded', function() 
-	{
-		readCookie();
-	}, false);
-	</script>
-	
 </head>
 <body>
 
