AddContact works on website now

--- a/color.html
+++ b/color.html
@@ -45,7 +45,7 @@
 					<input class="form-control" type="text" id="newContactFirstNameText" placeholder="First Name" required>
 				</div>
 				<div class="col-md-2">
-					<input class="form-control" type="text" id="newContactTLastNameText" placeholder="Last Name" required>
+					<input class="form-control" type="text" id="newContactLastNameText" placeholder="Last Name" required>
 				</div>
 				<div class="col-md-3">
 					<input class="form-control" type="text" id="newContactPhoneText" placeholder="XXX-XXX-XXXX" required>
