--- a/signup.html
+++ b/signup.html
@@ -25,7 +25,6 @@
 		<div class="row">
 			<div class="col-md-4 col-sm-4 col-xs-12"></div>
 			<div class="col-md-4 col-sm-4 col-xs-12">
-			<!--form starts here-->
                     <div class="row mb-3">
 					  <label for="firstName">First name</label>
 					  <div class="col-sm-12">
@@ -44,12 +43,16 @@
 					  <label for="userName">Username </label>
 					  <div class="col-sm-12">
 						<input type="userName" class="form-control" id="userName" required/>
+						<div class="valid-feedback">Good</div>
+      					<div class="invalid-feedback">Wrong</div>
 					  </div>
 					</div>
 					<div class="row mb-3">
 					  <label for="password">Password </label>
 					  <div class="col-sm-12">
 						<input type="password" class="form-control" id="password" required/>
+						<div class="valid-feedback">Good</div>
+      					<div class="invalid-feedback">Wrong</div>
 					  </div>
 					</div>
 					<div class="row mb-3">
@@ -66,7 +69,35 @@
                         <button class="btn btn-success" type="submit" onclick="doSignup()">Submit</button>
                         <span class="text" id="signupResult"></span>
                     </div>
-                  <!--form ends here-->
+					<div class="col-6 mt-4 mt-xxl-0 w-auto h-auto">
+
+						<div
+						  class="alert px-4 py-3 mb-0 d-none"
+						  role="alert"
+						  data-mdb-color="warning"
+						  id="password-alert"
+						  >
+						  <ul class="list-unstyled mb-0">
+							<li class="requirements leng">
+							  <i class="fas fa-check text-success me-2"></i>
+							  <i class="fas fa-times text-danger me-3"></i>
+							  Your password must have at least 8 chars</li>
+							<li class="requirements big-letter">
+							  <i class="fas fa-check text-success me-2"></i>
+							  <i class="fas fa-times text-danger me-3"></i>
+							  Your password must have at least 1 Capital letter.</li>
+							<li class="requirements num">
+							  <i class="fas fa-check text-success me-2"></i>
+							  <i class="fas fa-times text-danger me-3"></i>
+							  Your password must have at least 1 number.</li>
+							<li class="requirements special-char">
+							  <i class="fas fa-check text-success me-2"></i>
+							  <i class="fas fa-times text-danger me-3"></i>
+							  Your password must have at least 1 special char.</li>
+						  </ul>
+						</div>
+					
+					  </div>
 			</div>
 			<div class="col-md-4-col col-sm-4 col-xs-12"></div>
 		</div>
