--- a/color.html
+++ b/color.html
@@ -38,8 +38,8 @@
 				</div>
 			</div>
 		</div>
-		<div class="container-lg">
-			<div class="row justify-content-center addContact">
+		<div class="row justify-content-center">
+			<div class="col-sm-3 addContact">
 				<div class="col-md-2">
 					<input class="form-control" type="text" id="newContactFirstNameText" placeholder="First Name" required>
 				</div>
@@ -57,9 +57,7 @@
 					<span id="contactAddResult"></span>
 				</div>			
 			</div>
-		</div>
-		<div class="row justify-content-center">
-			<div class="col-lg-9">
+			<div class="col">
 				<table id="contacts" cellpadding="0" cellspacing="0" border="2">
 					<thread>
 						<tr>
