--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
 </head>
 <body>
-	<div class="container-fluid background">
-		<!-- <ul class="nav justify-content-end">
-            <li class="nav-item">
-				<button class ="btn" onclick="location.href = 'login.html'">Login</button>
-            </li>
-            <li class="nav-item">
-				<button class="btn" onclick="location.href = 'Signup.html'">Signup</button>
-            </li>
-          </ul> -->
-		<div class="row justify-content-center">
-		  	<div class="col d-flex justify-content-end">
-				<button class="btn btn-lg text-center btn-dark" onclick="location.href = 'login.html'">Login</button>
+	<div class="container-fluid background d-flex align-items-center justify-content-center">
+		<div class="container-sm d-flex justify-content-center form-container home-form">
+			<!-- <div class="row mb-3">
+				<div class="col d-flex justify-content-center">
+					<h2 class="title">Cityscape Contacts</h2>
+				</div>
+			</div> -->
+			<div class="row mb-3">
+				<div class="col d-flex justify-content-end">
+					<button class="btn btn-lg text-center btn-warning" onclick="location.href = 'login.html'">Login</button>
+				</div>
+				<div class="col d-flex justify-content-start">
+					<button class="btn btn-lg text-center btn-warning" onclick="location.href = 'signup.html'">Signup</button>
+				</div>
 			</div>
-			<div class="col d-flex justify-content-start">
-				<button class="btn btn-lg text-center btn-dark" onclick="location.href = 'signup.html'">Signup</button>
-			</div>
+		  	
 		</div>
 		<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 	</div>
