--- a/color.html
+++ b/color.html
@@ -27,51 +27,58 @@
         </ul>
 		<div class="container-lg">
 			<div class="row justify-content-center">
-				<div class="col-md-6">
+				<div class="col-md-3"></div>
+				<div class="col-md-5 justify-content-end">
 					<div class="input-group">
 						<input  class="form-control" id="searchText" type="text" placeholder="Search contact..." aria-describedby="basic-addon1">
 					</div>
 				</div>
-				<div class="col-md-2">
+				<div class="col-md-3">
 					<button class="btn btn-warning align-top" id="searchContactButton" onclick=searchContacts()>Search</button>
 					<span id="contactSearchResult"></span>
 				</div>
 			</div>
 		</div>
-		<div class="row justify-content-center">
-			<div class="col-sm-3 addContact">
-				<div class="col-md-2">
-					<input class="form-control" type="text" id="newContactFirstNameText" placeholder="First Name" required>
+		<div class="container-fluid full-table-container d-flex align-content-stretch">
+			<div class="row justify-content-center flex-grow-1">
+				<div class="col-sm-3 addContact form-container">
+					<div class="row justify-content-center align-items-center add-contact-row">
+						<h4 class="text-center">Add Contact</h4>
+					</div>
+					<div class="row add-contact-row">
+						<input class="form-control" type="text" id="newContactFirstNameText" placeholder="First Name" required>
+					</div>
+					<div class="row add-contact-row">
+						<input class="form-control" type="text" id="newContactLastNameText" placeholder="Last Name" required>
+					</div>
+					<div class="row add-contact-row">
+						<input class="form-control" type="text" id="newContactPhoneText" placeholder="XXX-XXX-XXXX" required>
+					</div>
+					<div class="row add-contact-row">
+						<input class="form-control" type="text" id="newContactEmailText" placeholder="foo@email.com" required>
+					</div>
+					<div class="row add-button">
+						<button class="btn btn-warning align-top" type="button" id="addContactButton" onclick="addContact()">Add</button>
+						<span id="contactAddResult"></span>
+					</div>			
 				</div>
-				<div class="col-md-2">
-					<input class="form-control" type="text" id="newContactLastNameText" placeholder="Last Name" required>
+				<div class="col">
+					<table id="contacts" cellpadding="0" cellspacing="0" border="2">
+						<thread>
+							<tr>
+								<th>First Name</th>
+								<th>Last Name</th>
+								<th>Email</th>
+								<th>Phone</th>
+								<th>Edit Contact</th>
+							</tr>
+						</thread>
+						<tbody id="tbody"></tbody>
+					</table>
 				</div>
-				<div class="col-md-3">
-					<input class="form-control" type="text" id="newContactPhoneText" placeholder="XXX-XXX-XXXX" required>
-				</div>
-				<div class="col-md-3">
-					<input class="form-control" type="text" id="newContactEmailText" placeholder="foo@email.com" required>
-				</div>
-				<div class="col-sm-1">
-					<button class="btn btn-warning align-top" type="button" id="addContactButton" onclick="addContact()">Add</button>
-					<span id="contactAddResult"></span>
-				</div>			
-			</div>
-			<div class="col">
-				<table id="contacts" cellpadding="0" cellspacing="0" border="2">
-					<thread>
-						<tr>
-							<th>First Name</th>
-							<th>Last Name</th>
-							<th>Email</th>
-							<th>Phone</th>
-							<th>Edit Contact</th>
-						</tr>
-					</thread>
-					<tbody id="tbody"></tbody>
-				</table>
 			</div>
 		</div>
+		
 	</div>
 
 
