--- a/index.html
+++ b/index.html
@@ -13,22 +13,24 @@
 </head>
 <body>
 	<div class="container-fluid background d-flex align-items-center justify-content-center">
-		<div class="container-sm d-flex justify-content-center form-container home-form">
-			<!-- <div class="row mb-3">
-				<div class="col d-flex justify-content-center">
-					<h2 class="title">Cityscape Contacts</h2>
-				</div>
-			</div> -->
-			<div class="row mb-3">
-				<div class="col d-flex justify-content-end">
-					<button class="btn btn-lg text-center btn-warning" onclick="location.href = 'login.html'">Login</button>
-				</div>
-				<div class="col d-flex justify-content-start">
-					<button class="btn btn-lg text-center btn-warning" onclick="location.href = 'signup.html'">Signup</button>
+		<div class="col-md-4">
+			<div class="container d-flex justify-content-center form-container home-form">
+				<!-- <div class="row mb-3">
+					<div class="col d-flex justify-content-center">
+						<h2 class="title">Cityscape Contacts</h2>
+					</div>
+				</div> -->
+				<div class="row mb-3">
+					<div class="col d-flex justify-content-end">
+						<button class="btn btn-lg text-center btn-warning" onclick="location.href = 'login.html'">Login</button>
+					</div>
+					<div class="col d-flex justify-content-start">
+						<button class="btn btn-lg text-center btn-warning" onclick="location.href = 'signup.html'">Signup</button>
+					</div>
 				</div>
 			</div>
-		  	
 		</div>
+		
 		<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 	</div>
 </body>
