--- a/login.html
+++ b/login.html
@@ -13,13 +13,13 @@
 </head>
 
 <body>
-	<div class="container-fluid background">
+	<div class="container-fluid background" id="backg">
         <ul class="nav justify-content-end">
             <li class="nav-item">
-              <button class="btn" onclick="location.href = 'index.html'">Home</button>
+              <button class="btn btn-warning" onclick="location.href = 'index.html'">Home</button>
             </li>
             <li class="nav-item">
-              <button class="btn" onclick="location.href = 'signup.html'">Sign up</button>
+              <button class="btn btn-warning" onclick="location.href = 'signup.html'">Sign up</button>
             </li>
           </ul>
 		<div class="row">
@@ -46,7 +46,7 @@
 					  </div>
 					  <div class="d-grid mx-auto input-format">
 						  <button class="btn btn-warning" type="submit" onclick="doLogin()">Submit</button>
-						  <span class="text" id="loginResult"></span>
+						  <span class="text text-center" id="loginResult"></span>
 					  </div>
 				</div>
 				<!-- </form> -->
