--- a/signup.html
+++ b/signup.html
@@ -13,13 +13,13 @@
 </head>
 
 <body>
-	<div class="container-fluid background">
+	<div class="container-fluid background" id="backg">
         <ul class="nav justify-content-end">
             <li class="nav-item">
-              <button class="btn" onclick="location.href = 'index.html'">Home</button>
+              <button class="btn btn-warning" onclick="location.href = 'index.html'">Home</button>
             </li>
             <li class="nav-item">
-                <button class ="btn" onclick="location.href = 'login.html'">Login</button>
+                <button class ="btn btn-warning" onclick="location.href = 'login.html'">Login</button>
             </li>
           </ul>
 		<div class="row align-items-center">
@@ -59,7 +59,7 @@
 					</div>
                     <div class="d-grid input-format">
                         <button class="btn btn-warning" type="submit" onclick="doSignup()">Submit</button>
-                        <span class="text" id="signupResult"></span>
+                        <span class="text text-center" id="signupResult"></span>
                     </div>
 				</div>
 			</div>
