--- a/signup.html
+++ b/signup.html
@@ -103,7 +103,7 @@
 				  <li class="requirements leng">
 					<i class="fas fa-check text-success me-2"></i>
 					<i class="fas fa-times text-danger me-3"></i>
-					Your password must have at least 3 leters</li>
+					Your password must have at least 3 letters</li>
 				</ul>
 			  </div>
 			</div>
